--- a/premiosplatziapp/polls/templates/polls/detail.html
+++ b/premiosplatziapp/polls/templates/polls/detail.html
@@ -1,6 +1,33 @@
-<h1>{{question.question_text}}</h1>
+<form action="{% url 'polls:vote' question.id %}" method="post">
+{% csrf_token %}
+<fieldset>
+    <legend><h1>{{question.question_text}}</h1></legend>
+    {% if error_mesages %}
+        <p><strong>{{error_mesages}}</strong></p>
+    {% endif %}
+    {% for choice in question.choice_set.all %}
+        <input 
+            type="radio"
+            name="choice"
+            id="choice{{ forloop.counter }}"
+            value="{{ choice.id }}"
+            required
+        >
+        <label for="choice{{ forloop.counter }}">
+            {{choice.choice_text}}
+        </label>
+        <br>
+    {% endfor %}
+</fieldset>
+<input type="submit" value="vote">
+</form>
+
+
+
+
+{% comment %} <h1>{{question.question_text}}</h1>
 <ul>
 {% for choice in question.choice_set.all %}
     <li>{{ choice.choice_text }}</li>
 {% endfor %}
-</ul>
+</ul> {% endcomment %}
