--- a/premiosplatziapp/polls/templates/polls/detail.html
+++ b/premiosplatziapp/polls/templates/polls/detail.html
@@ -11,7 +11,7 @@
             name="choice"
             id="choice{{ forloop.counter }}"
             value="{{ choice.id }}"
-            required
+            {% comment %} required {% endcomment %}
         >
         <label for="choice{{ forloop.counter }}">
             {{choice.choice_text}}
@@ -21,6 +21,8 @@
 </fieldset>
 <input type="submit" value="vote">
 </form>
+<br>
+<a href=" {% url 'polls:index' %} "> Ir a inicio </a>
 
 
 
