--- a/premiosplatziapp/polls/templates/polls/result.html
+++ b/premiosplatziapp/polls/templates/polls/result.html
@@ -1,3 +1,6 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'polls\sa.css' %}"/>
+
 <h1>{{ question.question_text}}</h1>
 <ul>
     {% for choice in  question.choice_set.all %}
