--- a/premiosplatziapp/polls/templates/polls/index.html
+++ b/premiosplatziapp/polls/templates/polls/index.html
@@ -1,5 +1,43 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'polls\sa.css' %}"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{% static 'polls/reset.css' %}">
+  <link rel="stylesheet" href="{% static 'polls/sty.css' %}">
+  <title>Premios Platzi App</title>
+</head>
+<body>
+  <header>
+    <h1>Premios Platzi App</h1>
+  </header>
+  <main>
+    {% if lates_question_list %}
+    <ul>
+    {% for question in lates_question_list %}
+        <li class="color-change-2x"><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+    {% endfor %}
+    </ul>
+    {% else %}
+          <p>No polls are available</p>
+    {% endif %}
+  </main>
+  <footer>
+    <a href="https://Platzi.com">Platzi</a>
+    <a href="#">Contacto</a>
+    <a href="#">Quieres ser profe?</a>
+    <a href="#">Politica de privacidad</a>
+    <a href="#">terminos y condiciones</a>
+
+  </footer>
+</body>
+</html>
+
+
+<!-- {% load static %}
+<link rel="stylesheet" href="{% static 'polls\style.css' %}"/>
 
 {% if lates_question_list %}
 <ul>
@@ -15,4 +53,4 @@
 </ul>
 {% else %}
 <p>No polls are available</p>
-{% endif %}
+{% endif %} -->
